# TATS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TATS  cmake_install.cmake  main.cpp  old_main.cpp  spittest.py
examples/: rc_robot_with_target_detection_and_tracking.cpp  train_tats.cpp  train_tats_imitation_learning.cpp  train_tats_multiprocess.cpp
examples/rc_controller/: PS4_Bluetooth_To_RF.ino  readme.md
install/: install-opencv.sh  install-pytorch.sh
models/backup/3_11_21/: Version.pt  data.h  episodeAverages.txt  episodeStepRewards.txt  trainingLoss.txt
models/backup/3_11_21_v2/: episodeAverages.txt  episodeStepRewards.txt  trainingLoss.txt
models/backup/3_11_21_v3/: data.h
models/backup/5253/: Alpha_Checkpoint.pt  Q_Net_Checkpoint1.pt  Target_Value_Checkpoint.pt
models/backup/5304/: Alpha_Checkpoint.pt
models/backup/6-3-2021/: config.h  episodeAverages.txt  episodeStepRewards.txt  trainingLoss.txt
models/backup/6-4-2021/: config.h
models/backup/6_2_21/: data.h
models/checkpoint/: Version.pt
models/checkpoint/1500/: Alpha_Checkpoint.pt  P_Net_Checkpoint.pt  Q_Net_Checkpoint1.pt  Q_Net_Checkpoint2.pt  Target_Value_Checkpoint.pt  Value_Checkpoint.pt  Version.pt
models/checkpoint/2040/: Alpha_Checkpoint.pt  P_Net_Checkpoint.pt  Value_Checkpoint.pt
models/checkpoint/2250/: Alpha_Checkpoint.pt  Q_Net_Checkpoint1.pt  Q_Net_Checkpoint2.pt  Target_Value_Checkpoint.pt  Value_Checkpoint.pt
models/checkpoint/3000/: Alpha_Checkpoint.pt  P_Net_Checkpoint.pt  (+4 more)
src/detection/: ArucoDetector.cpp  ArucoDetector.h  CascadeDetector.cpp  CascadeDetector.h  ObjectDetector.cpp  ObjectDetector.h  RCNNDetector.cpp  RCNNDetector.h  YoloDetector.cpp  YoloDetector.h
src/env/: Env.cpp  Env.h  EnvBase.cpp  EnvBase.h  PanTiltEnv.cpp  PanTiltEnv.h  PanTiltManager.cpp  PanTiltManager.h  ServoEnv.cpp  ServoEnv.h
src/network/: ExpReplayBuffer.cpp  ExpReplayBuffer.h  Normal.cpp  Normal.h  PolicyNetwork.cpp  PolicyNetwork.h  QNetwork.cpp  QNetwork.h  ReplayBuffer.cpp  ReplayBuffer.h  SACAgent.cpp  SACAgent.h  ValueNetwork.cpp  ValueNetwork.h
src/pid/: PID.cpp  PID.h
src/servo/: PCA9685.cpp  PCA9685.h  ServoKit.cpp  ServoKit.h
src/tracking/: TATS.cpp  TATS.h
src/util/: config.h  data.h  util.h
src/wire/: Wire.cpp  Wire.h
stat/: episodeAverages.txt  plot.py  trainingLoss.txt
stat/0/: episodeAverages.txt  episodeStepRewards.txt
stat/1/: episodeAverages.txt  episodeStepRewards.txt
train/: sim.py
(+1843 files in other folders)
